[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
jsonwebtoken = "9.2.0"
bcrypt = "0.10.0"
dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8", "with-serde_json-1"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
